sql/item_cmpfunc.h
@@ -3011,6 +3011,7 @@ public:
   bool eval_not_null_tables(void *opt_arg);
   Item *build_clone(THD *thd);
   bool excl_dep_on_grouping_fields(st_select_lex *sel);
+  bool excl_dep_on_group_fields_for_having_pushdown(st_select_lex *sel);
 };
 
 template <template<class> class LI, class T> class Item_equal_iterator;
